fix: temporary double scroll bar

--- a/styles/css/vtex.my-account.css
+++ b/styles/css/vtex.my-account.css
@@ -966,6 +966,6 @@
 .vtex-menu-2-x-styledLinkContainer--nutrition {
   padding: 10px 0 0;
 }
-:global(.vtex-store__template) {
-    overflow-x: visible;
-}
+/* :global(.vtex-store__template) {
+    overflow: hidden;
+} */
